--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,20 @@
 build
 node_modules
 README.md
+npm-debug.log
+.git
+.gitignore
+.env
+.env.local
+dist
+.DS_Store
+.vscode
+.idea
+coverage
+temp-uploads
+.next
+out
+STARTUP_GUIDE.md
+DELIVERY_READY.md
+FINAL_SUMMARY.md
+*.md
